typescript/checker/tests/conformance/scanner/ecmascript5/scannerNumericLiteral4.ts.stderr
error: Expected +, - or decimal digit after e
 --> $DIR/tests/conformance/scanner/ecmascript5/scannerNumericLiteral4.ts:2:1
  |
2 | 1e
  | ^^

